Better handling/formatting of parent fields and properties in class description.

--- a/src/templates/profile.tt
+++ b/src/templates/profile.tt
@@ -45,18 +45,18 @@
     <div class="content">
       <h2 class="directory">[% location %]</h2>
       <h1 class="basename">[% basename %]<span class="file-attributes">[% IF is_abstract %]abstract&nbsp; [% END %][% IF is_obsolete %]obsolete&nbsp; [% END %]</span></h1>
-	    [% IF has_categories %]
-	    <p class="small categories">[% strjoin(categories, ', ') %]</p>
-	    [% END %]      
+      [% IF has_categories %]
+      <p class="small categories">[% strjoin(categories, ', ') %]</p>
+      [% END %]      
       
       [% IF is_batch %]<span class="file_attribute small">batch file</span>[% END %]
       [% IF has_main_level %]<span class="file_attribute small">includes main-level program</span>[% END %]
-	    [% IF is_private %]<span class="file_attribute small">private</span>[% END %]
-	    <br/>
+      [% IF is_private %]<span class="file_attribute small">private</span>[% END %]
+      <br/>
 
       [% IF has_comments %]
       <div id="file_comments">
-      	<div class="small [% IF preformat %]pre[% END %]">[% comments %]</div>
+        <div class="small [% IF preformat %]pre[% END %]">[% comments %]</div>
       </div>
       [% END %]
 
@@ -80,11 +80,11 @@
         
             [% IF n_ancestors gt n_parents %]      
             <p class="small">All ancestor classes:
-          		[% FOREACH a IN ancestors %]
-          		[% IF a->hasUrl() %]<a href="[% relative_root %][% a->getUrl() %]">[% END %][% a->getClassname() %][% IF a->hasUrl() %]</a>[% END %]
-          		[% END %]
-          	</p>
-          	[% END %]
+              [% FOREACH a IN ancestors %]
+              [% IF a->hasUrl() %]<a href="[% relative_root %][% a->getUrl() %]">[% END %][% a->getClassname() %][% IF a->hasUrl() %]</a>[% END %]
+              [% END %]
+            </p>
+            [% END %]
           [% END %]
       
           [% IF n_children gt 0 %]
@@ -95,51 +95,62 @@
             </p>      
           [% END %]
       
-          [% IF n_visible_properties gt 0 %]
+          [% IF n_visible_properties gt 0 || n_visible_parent_properties gt 0 %]
           <h3>Properties</h3>
-          	<div class="details">
-    	        <dl>
-    	          [% FOREACH p IN visible_properties %][% SCOPE p %]
-    	          <dt>[% name %] <span class="smaller">[% IF is_get %]get [% END %][% IF is_set %]set [% END %][% IF is_init %]init [% END %][% IF has_type %]type=[% type %][% END %]</span></dt>
-    	          <dd class="small">[% comments %]</dd>
-    	          [% END %][% END %]
-    	        </dl>  
-            </div>    
-          [% END %]
-      
-          [% IF n_fields gt 0 && ~user %]
-          <h3>Fields</h3>
-          	<div class="details">
-    	        <dl>
-    	          [% FOREACH f IN fields %][% SCOPE f %]
-    	          <dt>[% name %] <span class="smaller">[% type %]</span></dt>
-    	          <dd class="small">[% comments %]</dd>
-    	          [% END %][% END %]
-    	        </dl>        	
-          	</div>
-          [% END %]
-      
-          [% IF n_ancestors gt 0 && ~user %]
-          [% FOREACH a IN ancestors %][% SCOPE a %]
-          	[% IF n_fields gt 0 %]
-          	<h4>Fields in [% IF has_url %]<a href="[% relative_root %][% url %]">[% END %][% classname %][% IF has_url %]</a>[% END %]</h4>
-          	<ul class="fieldslist smaller">
-          	  [% FOREACH f IN fields %][% SCOPE f %]
-          	  <li><span class="fieldname">[% name %]</span> [% type %]</li>
-          	  [% END %][% END %]
-          	</ul>
-          	[% END %]
-          	[% IF n_visible_properties gt 0 %]
-          	<h4>Properties in [% IF has_url %]<a href="[% relative_root %][% url %]">[% END %][% classname %][% IF has_url %]</a>[% END %]</h4>
+            [% IF n_ancestors gt 0 && ~user %]
+            [% FOREACH a IN ancestors %][% SCOPE a %]
+              [% IF n_visible_properties gt 0 %]
+              <h4>Properties in [% IF has_url %]<a href="[% relative_root %][% url %]">[% END %][% classname %][% IF has_url %]</a>[% END %]</h4>
 
-            <ul class="fieldslist smaller">
-              [% FOREACH p IN visible_properties %][% SCOPE p %]
-	            <li><span class="fieldname">[% name %]</span> [% IF is_get %]get [% END %][% IF is_set %]set [% END %][% IF is_init %]init [% END %][% IF has_type %]type=[% type %][% END %]</li>
-              [% END %][% END %]
-            </ul>            
-          	[% END %]
-          [% END %][% END %]
-        [% END %]
+              <ul class="fieldslist smaller">
+                [% FOREACH p IN visible_properties %][% SCOPE p %]
+                <li><span class="fieldname">[% name %]</span> [% IF is_get %]get [% END %][% IF is_set %]set [% END %][% IF is_init %]init [% END %][% IF has_type %]type=[% type %][% END %]</li>
+                [% END %][% END %]
+              </ul>            
+              [% END %]
+            [% END %][% END %]
+            [% END %]
+          
+            [% IF n_visible_properties gt 0 %]
+            <h4>Properties in [% classname %]</h4>            
+            <div class="details">
+              <dl>
+                [% FOREACH p IN visible_properties %][% SCOPE p %]
+                <dt>[% name %] <span class="smaller">[% IF is_get %]get [% END %][% IF is_set %]set [% END %][% IF is_init %]init [% END %][% IF has_type %]type=[% type %][% END %]</span></dt>
+                <dd class="small">[% comments %]</dd>
+                [% END %][% END %]
+              </dl>  
+            </div>
+            [% END %]
+          [% END %]
+                
+          [% IF (n_fields gt 0 || n_parent_fields gt 0) && ~user %]
+          <h3>Fields</h3>
+            [% IF n_ancestors gt 0 && ~user %]
+            [% FOREACH a IN ancestors %][% SCOPE a %]
+              [% IF n_fields gt 0 %]
+              <h4>Fields in [% IF has_url %]<a href="[% relative_root %][% url %]">[% END %][% classname %][% IF has_url %]</a>[% END %]</h4>
+              <ul class="fieldslist smaller">
+                [% FOREACH f IN fields %][% SCOPE f %]
+                <li><span class="fieldname">[% name %]</span> [% type %]</li>
+                [% END %][% END %]
+              </ul>
+              [% END %]
+            [% END %][% END %]
+            [% END %]
+          
+            [% IF n_fields gt 0 %]
+            <h4>Fields in [% classname %]</h4>
+            <div class="details">
+              <dl>
+                [% FOREACH f IN fields %][% SCOPE f %]
+                <dt>[% name %] <span class="smaller">[% type %]</span></dt>
+                <dd class="small">[% comments %]</dd>
+                [% END %][% END %]
+              </dl>
+            </div>
+            [% END %]
+          [% END %]
       </div>      
       [% END %][% END %][% END %]
       
@@ -218,19 +229,19 @@
       </div>
       [% END %]
       
-              	
-    	[% IF n_visible_routines gt 0 %]
-    	<div id="routine-details">
-    	  [% IF n_visible_routines gt 1 %]<h2>Routine details</h2>[% END %]
+                
+      [% IF n_visible_routines gt 0 %]
+      <div id="routine-details">
+        [% IF n_visible_routines gt 1 %]<h2>Routine details</h2>[% END %]
         
         [% FOREACH r IN visible_routines %][% SCOPE r %]
         <div class="routine-details details" id="[% name %]">
-        	<h2 class="routine-name"><a href="#root" class="top">top</a> [% IF ~nosource %]<a href="[% source_url %]#[% name %]:source" class="top">source</a> [% END %][% name %]<span class="routine-attributes">[% IF is_private %]private [% END %][% IF is_obsolete %]obsolete [% END %][% IF is_abstract %]abstract [% END %]</span></h2>
-        	
-        	[% IF has_categories %]
-        	<p class="small categories">[% strjoin(categories, ', ') %]</p>
-        	[% END %]
-        	
+          <h2 class="routine-name"><a href="#root" class="top">top</a> [% IF ~nosource %]<a href="[% source_url %]#[% name %]:source" class="top">source</a> [% END %][% name %]<span class="routine-attributes">[% IF is_private %]private [% END %][% IF is_obsolete %]obsolete [% END %][% IF is_abstract %]abstract [% END %]</span></h2>
+          
+          [% IF has_categories %]
+          <p class="small categories">[% strjoin(categories, ', ') %]</p>
+          [% END %]
+          
           <p class="syntax"><code>[% IF is_function %]<span class="var">result</span> = [% END %][% name %][% IF is_function %]([% END %][% IF n_visible_parameters gt 0 %][% FOREACH p IN visible_parameters %][% SCOPE p %]<span class="argument">[% IF is_optional %] [[% END %][% prefix %]<a href="#[% id %]">[% name %]</a>[% suffix %][% IF is_optional %]][% END %]</span>[% END %][% END %][% END %][% IF n_visible_keywords gt 0 %][% FOREACH k IN visible_keywords %][% SCOPE k %]<span class="argument">[% IF is_optional %] [[% END %][% prefix %][% IF is_boolean %]/[% END %]<a href="#[% id %]">[% name %]</a>[% IF ~is_boolean %]=<span class="var">[% IF type ne '' %][% type %][% ELSE %][% name %][% END %]</span>[% END %][% suffix %][% IF is_optional %]][% END %]</span>[% END %][% END %][% END %][% IF is_function %])[% END %]</code></p>
           
           [% IF has_comments %]
@@ -239,7 +250,7 @@
           
           [% IF is_function and has_returns %]
           <h3>Return value</h3>
-          	<div class="small">[% returns %]</div>
+            <div class="small">[% returns %]</div>
           [% END %]
           
           [% IF n_parameters gt 0 %]
@@ -342,17 +353,17 @@
           [% IF statistics %]
           <h3>Statistics</h3>
 
-		        <table class="attribute small" summary="Routine statistics">
-		          <tr>
-		            <td class="name">Lines:</td>
-		            <td><div class="box [% n_lines_color %]"></div> [% n_lines %] lines</td>
-		          </tr> 
+            <table class="attribute small" summary="Routine statistics">
+              <tr>
+                <td class="name">Lines:</td>
+                <td><div class="box [% n_lines_color %]"></div> [% n_lines %] lines</td>
+              </tr> 
 
-		          <tr>
-		            <td class="name">McCabe complexity:</td>
-		            <td><div class="box [% complexity_color %]"></div> [% complexity %]</td>
-		          </tr>   		            		                
-		        </table>
+              <tr>
+                <td class="name">McCabe complexity:</td>
+                <td><div class="box [% complexity_color %]"></div> [% complexity %]</td>
+              </tr>                                       
+            </table>
           [% END %]
                     
         </div>            
@@ -363,7 +374,7 @@
       
       <div id="attributes">
         <h2>File attributes</h2>
-        	
+          
         <table class="attribute small" summary="File attributes">
           <tr>
             <td class="name">Modification date:</td>
