--- a/src/templates/dir-overview.tt
+++ b/src/templates/dir-overview.tt
@@ -65,6 +65,10 @@
           [% END %]
         </dl>          
       [% END %]
+
+  		[% IF (n_visible_pro_files gt 0) || (n_visible_dlm_files gt 0)  || (n_visible_sav_files gt 0) || (n_visible_idldoc_files gt 0) %]
+      <h2>Contents</h2>
+      [% END %]
               		
   		[% IF n_visible_pro_files gt 0 %]
   		<h3>.pro files</h3>
@@ -76,8 +80,6 @@
   			 [% END %][% END %]
   		  </dl>
   		[% END %]
-      
-      <h2>Contents</h2>
       
       [% IF n_visible_dlm_files gt 0 %]
         <h3>.dlm files</h3>
