--- a/src/templates/dc-index-entries.tt
+++ b/src/templates/dc-index-entries.tt
@@ -1,8 +1,3 @@
-[% IF ~index_empty %]
-  [% FOREACH letter IN index_first_letters %]
-    [% FOREACH item IN system->getIndexEntries(letter) %][% SCOPE item %]
-"";"[% index_name %]";"[% IF has_comments %][% comments_first_line %][% END %]";"ID";"[% index_url %]";"0"
-    [% END %][% END %]
-  [% END %]
-[% END %]
+[% IF ~index_empty %][% FOREACH letter IN index_first_letters %][% FOREACH item IN system->getIndexEntries(letter) %][% SCOPE item %][% IF obj_isa(item, 'DOCtreeRoutine') %]"";"[% index_name %]";"[% IF has_comments %][% (mg_strunmerge(comments_first_line))[0] %][% END %]";"ID";"[% index_url %]";"0"
+[% END %][% END %][% END %][% END %][% END %]
 
