--- a/src/templates/dc-profile.tt
+++ b/src/templates/dc-profile.tt
@@ -1,17 +1,6 @@
 <title>[% basename %] ([% title %])</title>
 
 <div class="content">
-  <h2 class="directory">[% location %]</h2>
-  <h1 class="basename">[% basename %]<span class="file-attributes">[% IF is_abstract %]abstract&nbsp; [% END %][% IF is_obsolete %]obsolete&nbsp; [% END %]</span></h1>
-  [% IF has_categories %]
-  <p class="small categories">[% strjoin(categories, ', ') %]</p>
-  [% END %]      
-      
-  [% IF is_batch %]<span class="file_attribute small">batch file</span>[% END %]
-  [% IF has_main_level %]<span class="file_attribute small">includes main-level program</span>[% END %]
-  [% IF is_private %]<span class="file_attribute small">private</span>[% END %]
-  <br/>
-
   [% IF has_comments %]
   <div id="file_comments">
     <div class="small [% IF preformat %]pre[% END %]">[% comments %]</div>
@@ -19,14 +8,14 @@
   [% END %]
 
   [% IF has_examples %]
-  <h2>Examples</h2>
+  <h2>Examples</h2><hr class="style-one"/>
 
-  <div class="small">[% examples %]</div>      
+  <div class="small">[% examples %]</div>
   [% END %]
 
   [% IF has_class %][% FOREACH class IN classes %][% SCOPE class %]
   <div class="class-description">
-    <h2>Class description for [% classname %]</h2>
+    <h2>Class description for [% classname %]</h2><hr class="style-one"/>
 
       [% IF n_ancestors gt 0 %]
       <h3>Inheritance</h3>
@@ -44,15 +33,15 @@
         </p>
         [% END %]
       [% END %]
-      
+
       [% IF n_children gt 0 %]
-        <p class="small">Subclasses: 
+        <p class="small">Subclasses:
           [% FOREACH c IN children %]
           [% IF c->hasUrl() %]<a href="[% relative_root %][% c->getUrl() %]">[% END %][% c->getClassname() %][% IF c->hasUrl() %]</a>[% END %]
           [% END %]
-        </p>      
+        </p>
       [% END %]
-      
+
       [% IF n_visible_properties gt 0 || n_visible_parent_properties gt 0 %]
       <h3>Properties</h3>
         [% IF n_ancestors gt 0 && ~user %]
@@ -64,24 +53,24 @@
             [% FOREACH p IN visible_properties %][% SCOPE p %]
             <li><span class="fieldname">[% name %]</span> [% IF is_get %]get [% END %][% IF is_set %]set [% END %][% IF is_init %]init [% END %][% IF has_type %]type=[% type %][% END %]</li>
             [% END %][% END %]
-          </ul>            
+          </ul>
           [% END %]
         [% END %][% END %]
         [% END %]
-          
+
         [% IF n_visible_properties gt 0 %]
-        <h4>Properties in [% classname %]</h4>            
+        <h4>Properties in [% classname %]</h4>
         <div class="details">
           <dl>
             [% FOREACH p IN visible_properties %][% SCOPE p %]
             <dt>[% name %] <span class="smaller">[% IF is_get %]get [% END %][% IF is_set %]set [% END %][% IF is_init %]init [% END %][% IF has_type %]type=[% type %][% END %]</span></dt>
             <dd class="small">[% comments %]</dd>
             [% END %][% END %]
-          </dl>  
+          </dl>
         </div>
         [% END %]
       [% END %]
-                
+
       [% IF (n_fields gt 0 || n_parent_fields gt 0) && ~user %]
       <h3>Fields</h3>
         [% IF n_ancestors gt 0 && ~user %]
@@ -96,7 +85,7 @@
           [% END %]
         [% END %][% END %]
         [% END %]
-          
+
         [% IF n_fields gt 0 %]
         <h4>Fields in [% classname %]</h4>
         <div class="details">
@@ -109,44 +98,44 @@
         </div>
         [% END %]
       [% END %]
-  </div>      
+  </div>
   [% END %][% END %][% END %]
-      
+
   [% IF has_author_info %]
-  <h2>Author information</h2>
+  <h2>Author information</h2><hr class="style-one"/>
 
     <dl class="attribute small" summary="File author information">
       [% IF has_author %]
         <dt>Author</dt>
-        <dd>[% author %]</dd>        
+        <dd>[% author %]</dd>
       [% END %]
-          
+
       [% IF has_copyright %]
         <dt>Copyright</dt>
-        <dd>[% copyright %]</dd>       
+        <dd>[% copyright %]</dd>
       [% END %]
-          
+
       [% IF has_history %]
         <dt>History</dt>
-        <dd>[% history %]</dd>       
+        <dd>[% history %]</dd>
       [% END %]
 
       [% IF has_version %]
         <dt>Version</dt>
-        <dd>[% version %]</dd>  
-      [% END %]          
-    </dl>          
+        <dd>[% version %]</dd>
+      [% END %]
+    </dl>
   [% END %]
-                        
+
   [% IF has_others %]
-  <h2>Other file information</h2>
-      
+  <h2>Other file information</h2><hr class="style-one"/>
+
     <dl class="attribute small" summary="Other file attributes">
     [% IF has_bugs %]
         <dt>Bugs:</dt>
         <dd>[% bugs %]</dd>
     [% END %]
-                
+
     [% IF has_customer_id %]
         <dt>Customer ID:</dt>
         <dd>[% customer_id %]</dd>
@@ -154,9 +143,9 @@
 
     [% IF has_requires %]
         <dt>Requires:</dt>
-        <dd>[% requires %]</dd>     
+        <dd>[% requires %]</dd>
     [% END %]
-                
+
     [% IF has_restrictions %]
         <dt>Restrictions:</dt>
         <dd>[% restrictions %]</dd>
@@ -166,17 +155,17 @@
         <dt>Todo:</dt>
         <dd>[% todo %]</dd>
     [% END %]
-                
+
     [% IF has_uses %]
         <dt>Uses:</dt>
         <dd>[% uses %]</dd>
     [% END %]
     </dl>
   [% END %]
-      
+
   [% IF n_visible_routines gt 1 %]
   <div>
-    <h2>Routines</h2>
+    <h2>Routines</h2><hr class="style-one"/>
 
     <dl class="routine-summary">
       [% FOREACH r IN visible_routines %][% SCOPE r %]
@@ -186,33 +175,30 @@
     </dl>
   </div>
   [% END %]
-      
-                
+
+
   [% IF n_visible_routines gt 0 %]
   <div id="routine-details">
-    [% IF n_visible_routines gt 1 %]<h2>Routine details</h2>[% END %]
-        
+    [% IF n_visible_routines gt 1 %]<h2>Routine details</h2><hr class="style-one"/>[% END %]
+
     [% FOREACH r IN visible_routines %][% SCOPE r %]
     <div class="routine-details details" id="[% name %]">
-      <h2 class="routine-name">[% IF ~nosource %]<a href="[% source_url %]#[% name %]:source" class="top">source</a> [% END %][% name %]<span class="routine-attributes">[% IF is_private %]private [% END %][% IF is_obsolete %]obsolete [% END %][% IF is_abstract %]abstract [% END %]</span></h2>
-          
-      [% IF has_categories %]
-      <p class="small categories">[% strjoin(categories, ', ') %]</p>
-      [% END %]
-          
-      <p class="syntax"><code>[% IF is_function %]<span class="var">result</span> = [% END %][% name %][% IF is_function %]([% END %][% IF n_visible_parameters gt 0 %][% FOREACH p IN visible_parameters %][% SCOPE p %]<span class="argument">[% IF is_optional %] [[% END %][% prefix %]<a href="#[% id %]">[% name %]</a>[% suffix %][% IF is_optional %]][% END %]</span>[% END %][% END %][% END %][% IF n_visible_keywords gt 0 %][% FOREACH k IN visible_keywords %][% SCOPE k %]<span class="argument">[% IF is_optional %] [[% END %][% prefix %][% IF is_boolean %]/[% END %]<a href="#[% id %]">[% name %]</a>[% IF ~is_boolean %]=<span class="var">[% IF type ne '' %][% type %][% ELSE %][% name %][% END %]</span>[% END %][% suffix %][% IF is_optional %]][% END %]</span>[% END %][% END %][% END %][% IF is_function %])[% END %]</code></p>
-          
+      [% IF n_visible_routines gt 1 %]<h1>[% name %]</h1><hr class="style-one"/>[% END %]
+
       [% IF has_comments %]
       <div class="small [% IF preformat %]pre[% END %]">[% comments %]</div>
       [% END %]
-          
+
+      <h2>Syntax</h2><hr class="style-one"/>
+      <p class="syntax"><code>[% IF is_function %]<span class="var">result</span> = [% END %][% name %][% IF is_function %]([% END %][% IF n_visible_parameters gt 0 %][% FOREACH p IN visible_parameters %][% SCOPE p %]<span class="argument">[% IF is_optional %] [[% END %][% prefix %]<a href="#[% id %]">[% name %]</a>[% suffix %][% IF is_optional %]][% END %]</span>[% END %][% END %][% END %][% IF n_visible_keywords gt 0 %][% FOREACH k IN visible_keywords %][% SCOPE k %]<span class="argument">[% IF is_optional %] [[% END %][% prefix %][% IF is_boolean %]/[% END %]<a href="#[% id %]">[% name %]</a>[% IF ~is_boolean %]=<span class="var">[% IF type ne '' %][% type %][% ELSE %][% name %][% END %]</span>[% END %][% suffix %][% IF is_optional %]][% END %]</span>[% END %][% END %][% END %][% IF is_function %])[% END %]</code></p>
+
       [% IF is_function and has_returns %]
-      <h3>Return value</h3>
+      <h2>Return value</h2><hr class="style-one"/>
         <div class="small">[% returns %]</div>
       [% END %]
-          
+
       [% IF n_parameters gt 0 %]
-      <h3>Parameters</h3>
+      <h2>Parameters</h2><hr class="style-one"/>
         <dl>
           [% FOREACH p IN parameters %][% SCOPE p %]
           <dt id="[% id %]">[% name %] <span class="smaller">[% IF is_input %]in [% END %][% IF is_output %]out [% END %][% IF is_optional %]optional [% END %][% IF is_required %]required [% END %][% IF is_private %]private [% END %][% IF is_hidden %]hidden [% END %][% IF is_obsolete %]obsolete [% END %][% IF type ne '' %]type=[% type %] [% END %][% IF default_value ne '' %]default=[% default_value %][% END %]</span></dt>
@@ -220,9 +206,9 @@
           [% END %][% END %]
         </dl>
       [% END %]
-          
+
       [% IF n_keywords gt 0 %]
-      <h3>Keywords</h3>
+      <h2>Keywords</h2><hr class="style-one"/>
         <dl>
           [% FOREACH k IN keywords %][% SCOPE k %]
           <dt id="[% id %]">[% name %] <span class="smaller">[% IF is_input %]in [% END %][% IF is_output %]out [% END %][% IF is_optional %]optional [% END %][% IF is_required %]required [% END %][% IF is_private %]private [% END %][% IF is_hidden %]hidden [% END %][% IF is_obsolete %]obsolete [% END %][% IF type ne '' %]type=[% type %] [% END %][% IF default_value ne '' %]default=[% default_value %][% END %]</span></dt>
@@ -230,42 +216,42 @@
           [% END %][% END %]
         </dl>
       [% END %]
-          
+
       [% IF has_examples %]
-      <h3>Examples</h3>
+      <h2>Examples</h2><hr class="style-one"/>
       <div>[% examples %]</div>
       [% END %]
-          
+
       [% IF has_author_info %]
-      <h3>Author information</h3>
+      <h2>Author information</h2><hr class="style-one"/>
 
         <dl class="attribute small" summary="Routine author information">
           [% IF has_author %]
             <dt>Author:</dt>
-            <dd>[% author %]</dd>       
+            <dd>[% author %]</dd>
           [% END %]
-              
+
           [% IF has_copyright %]
             <dt>Copyright:</dt>
-            <dd>[% copyright %]</dd>       
+            <dd>[% copyright %]</dd>
           [% END %]
-              
+
           [% IF has_history %]
             <dt>History:</dt>
-            <dd>[% history %]</dd>    
+            <dd>[% history %]</dd>
           [% END %]
 
           [% IF has_version %]
             <dt>Version:</dt>
-            <dd>[% version %]</dd>     
-          [% END %]              
-        </dl>          
+            <dd>[% version %]</dd>
+          [% END %]
+        </dl>
       [% END %]
-          
-      [% IF has_others %]
-      <h3>Other attributes</h3>
 
-        <dl class="attribute small" summary="Other routine attributes">                            
+      [% IF has_others %]
+      <h2>Other attributes</h2><hr class="style-one"/>
+
+        <dl class="attribute small" summary="Other routine attributes">
           [% IF has_todo %]
             <dt>Todo:</dt>
             <dd>[% todo %]</dd>
@@ -280,80 +266,21 @@
             <dt>Requires:</dt>
             <dd>[% requires %]</dd>
           [% END %]
-              
+
           [% IF has_uses %]
             <dt>Uses:</dt>
             <dd>[% uses %]</dd>
           [% END %]
-                                                      
+
           [% IF has_bugs %]
             <dt>Bugs:</dt>
-            <dd>[% bugs %]</dd>       
+            <dd>[% bugs %]</dd>
           [% END %]
-
-          [% IF has_pre %]
-            <dt>Pre-condition:</dt>
-            <dd>[% pre %]</dd> 
-          [% END %]
-
-          [% IF has_post %]
-            <dt>Post-condition:</dt>
-            <dd>[% post %]</dd>    
-          [% END %]     
-
-          [% IF has_customer_id %]
-            <dt>Customer ID:</dt>
-            <dd>[% customer_id %]</dd>         
-          [% END %]                                     
         </dl>
       [% END %]
-          
-      [% IF statistics %]
-      <h3>Statistics</h3>
 
-        <table class="attribute small" summary="Routine statistics">
-          <tr>
-            <td class="name">Lines:</td>
-            <td><div class="box [% n_lines_color %]"></div> [% n_lines %] lines</td>
-          </tr> 
-
-          <tr>
-            <td class="name">McCabe complexity:</td>
-            <td><div class="box [% complexity_color %]"></div> [% complexity %]</td>
-          </tr>                                       
-        </table>
-      [% END %]
-                    
-    </div>            
+    </div>
     [% END %][% END %]
-            
   </div>
   [% END %]
-      
-  <div id="attributes">
-    <h2>File attributes</h2>
-          
-    <table class="attribute small" summary="File attributes">
-      <tr>
-        <td class="name">Modification date:</td>
-        <td>[% modification_time %]</td>
-      </tr>
-
-      <tr>
-        <td class="name">Lines:</td>
-        <td>[% n_lines %]</td>
-      </tr>
-               
-      [% IF format ne '' || markup ne '' %]             
-      <tr>
-        <td class="name">Docformat:</td>
-        <td>[% format %][% IF format ne '' %] [% END %][% markup %]</td>
-      </tr>
-      [% END %]
-    </table> 
-  </div>
-      
-  [% IF footer ne '' %][% INCLUDE_TEMPLATE footer %][% END %]
 </div>
-    
-[% INCLUDE_TEMPLATE idldoc_footer_location %]    
