Changing IDLdoc project location in footer to GitHub repo location.

--- a/src/templates/footer.tt
+++ b/src/templates/footer.tt
@@ -3,7 +3,7 @@
   <table class="smaller" summary="footer">
     <tr>
       <td class="left">Produced by IDLdoc [% idldoc_version %] on [% date %]</td>
-      <td class="right"><a target="_top" href="http://idldoc.idldev.com">IDLdoc project information</a></td>
+      <td class="right"><a target="_top" href="http://github.com/mgalloy/idldoc">IDLdoc project information</a></td>
     </tr>
   </table>
 
