--- a/src/templates/profile.tt
+++ b/src/templates/profile.tt
@@ -66,107 +66,6 @@
       <div class="small">[% examples %]</div>
       [% END %]
 
-      [% IF has_class %][% FOREACH class IN classes %][% SCOPE class %]
-      <div class="class-description">
-        <h2>Class description for [% classname %]</h2>
-
-          [% IF n_ancestors gt 0 %]
-          <h3>Inheritance</h3>
-            <ul>
-              [% FOREACH p IN parents %]
-              <li>[% IF p->hasUrl() %]<a href="[% relative_root %][% p->getUrl() %]">[% END %][% p->getClassname() %][% IF p->hasUrl() %]</a>[% END %]</li>
-              [% END %]
-            </ul>
-
-            [% IF n_ancestors gt n_parents %]
-            <p class="small">All ancestor classes:
-              [% FOREACH a IN ancestors %]
-              [% IF a->hasUrl() %]<a href="[% relative_root %][% a->getUrl() %]">[% END %][% a->getClassname() %][% IF a->hasUrl() %]</a>[% END %]
-              [% END %]
-            </p>
-            [% END %]
-          [% END %]
-
-          [% IF n_children gt 0 %]
-            <p class="small">Subclasses:
-              [% FOREACH c IN children %]
-              [% IF c->hasUrl() %]<a href="[% relative_root %][% c->getUrl() %]">[% END %][% c->getClassname() %][% IF c->hasUrl() %]</a>[% END %]
-              [% END %]
-            </p>
-          [% END %]
-
-          [% IF n_ancestors gt 0L %]
-          <h3>Inherited methods</h3>
-          [% FOREACH a IN ancestors %][% SCOPE a %]
-            [% IF n_methods gt 0 %]
-            <p>From [% IF a->hasUrl() %]<a href="[% relative_root %][% a->getUrl() %]">[% END %][% a->getClassname() %][% IF a->hasUrl() %]</a>[% END %]:
-            [% FOREACH m IN methods %][% SCOPE m %]
-            [% name %]
-            [% END %][% END %]
-            [% END %]
-            </p>
-          [% END %][% END %]
-          [% END %]
-          
-          [% IF n_visible_properties gt 0 || n_visible_parent_properties gt 0 %]
-          <h3>Properties</h3>
-            [% IF n_ancestors gt 0 && ~user %]
-            [% FOREACH a IN ancestors %][% SCOPE a %]
-              [% IF n_visible_properties gt 0 %]
-              <h4>Properties in [% IF has_url %]<a href="[% relative_root %][% url %]">[% END %][% classname %][% IF has_url %]</a>[% END %]</h4>
-
-              <ul class="fieldslist smaller">
-                [% FOREACH p IN visible_properties %][% SCOPE p %]
-                <li><span class="fieldname">[% name %]</span> [% IF is_get %]get [% END %][% IF is_set %]set [% END %][% IF is_init %]init [% END %][% IF has_type %]type=[% type %][% END %]</li>
-                [% END %][% END %]
-              </ul>
-              [% END %]
-            [% END %][% END %]
-            [% END %]
-
-            [% IF n_visible_properties gt 0 %]
-            <h4>Properties in [% classname %]</h4>
-            <div class="details">
-              <dl>
-                [% FOREACH p IN visible_properties %][% SCOPE p %]
-                <dt>[% name %] <span class="smaller">[% IF is_get %]get [% END %][% IF is_set %]set [% END %][% IF is_init %]init [% END %][% IF has_type %]type=[% type %][% END %]</span></dt>
-                <dd class="small">[% comments %]</dd>
-                [% END %][% END %]
-              </dl>
-            </div>
-            [% END %]
-          [% END %]
-
-          [% IF (n_fields gt 0 || n_parent_fields gt 0) && ~user %]
-          <h3>Fields</h3>
-            [% IF n_ancestors gt 0 && ~user %]
-            [% FOREACH a IN ancestors %][% SCOPE a %]
-              [% IF n_fields gt 0 %]
-              <h4>Fields in [% IF has_url %]<a href="[% relative_root %][% url %]">[% END %][% classname %][% IF has_url %]</a>[% END %]</h4>
-              <ul class="fieldslist smaller">
-                [% FOREACH f IN fields %][% SCOPE f %]
-                <li><span class="fieldname">[% name %]</span> [% type %]</li>
-                [% END %][% END %]
-              </ul>
-              [% END %]
-            [% END %][% END %]
-            [% END %]
-
-            [% IF n_fields gt 0 %]
-            <h4>Fields in [% classname %]</h4>
-            <div class="details">
-              <dl>
-                [% FOREACH f IN fields %][% SCOPE f %]
-                <dt>[% name %] <span class="smaller">[% type %]</span></dt>
-                <dd class="small">[% comments %]</dd>
-                [% END %][% END %]
-              </dl>
-            </div>
-            [% END %]
-          [% END %]
-      </div>
-      [% END %][% END %][% END %]
-
       [% IF has_author_info %]
       <h2>Author information</h2>
 
@@ -229,19 +128,130 @@
         </dl>
       [% END %]
 
-      [% IF n_visible_routines gt 1 %]
+      [% IF has_class %][% FOREACH class IN classes %][% SCOPE class %]
+      <div class="class-description">
+        <h2>Class description for [% classname %]</h2>
+
+          [% IF n_ancestors gt 0 %]
+          <h3>Inheritance</h3>
+            <ul>
+              [% FOREACH p IN parents %]
+              <li>[% IF p->hasUrl() %]<a href="[% relative_root %][% p->getUrl() %]">[% END %][% p->getClassname() %][% IF p->hasUrl() %]</a>[% END %]</li>
+              [% END %]
+            </ul>
+
+            [% IF n_ancestors gt n_parents %]
+            <p class="small">All ancestor classes:
+              [% FOREACH a IN ancestors %]
+              [% IF a->hasUrl() %]<a href="[% relative_root %][% a->getUrl() %]">[% END %][% a->getClassname() %][% IF a->hasUrl() %]</a>[% END %]
+              [% END %]
+            </p>
+            [% END %]
+          [% END %]
+
+          [% IF n_children gt 0 %]
+            <p class="small">Subclasses:
+              [% FOREACH c IN children %]
+              [% IF c->hasUrl() %]<a href="[% relative_root %][% c->getUrl() %]">[% END %][% c->getClassname() %][% IF c->hasUrl() %]</a>[% END %]
+              [% END %]
+            </p>
+          [% END %]
+
+          [% IF n_visible_properties gt 0 || n_visible_parent_properties gt 0 %]
+          <h3>Properties</h3>
+            [% IF n_ancestors gt 0 && ~user %]
+            [% FOREACH a IN ancestors %][% SCOPE a %]
+              [% IF n_visible_properties gt 0 %]
+              <h4>Properties in [% IF has_url %]<a href="[% relative_root %][% url %]">[% END %][% classname %][% IF has_url %]</a>[% END %]</h4>
+
+              <ul class="fieldslist smaller">
+                [% FOREACH p IN visible_properties %][% SCOPE p %]
+                <li><span class="fieldname">[% name %]</span> [% IF is_get %]get [% END %][% IF is_set %]set [% END %][% IF is_init %]init [% END %][% IF has_type %]type=[% type %][% END %]</li>
+                [% END %][% END %]
+              </ul>
+              [% END %]
+            [% END %][% END %]
+            [% END %]
+
+            [% IF n_visible_properties gt 0 %]
+            <h4>Properties in [% classname %]</h4>
+            <div class="details">
+              <dl>
+                [% FOREACH p IN visible_properties %][% SCOPE p %]
+                <dt>[% name %] <span class="smaller">[% IF is_get %]get [% END %][% IF is_set %]set [% END %][% IF is_init %]init [% END %][% IF has_type %]type=[% type %][% END %]</span></dt>
+                <dd class="small">[% comments %]</dd>
+                [% END %][% END %]
+              </dl>
+            </div>
+            [% END %]
+          [% END %]
+
+          [% IF (n_fields gt 0 || n_parent_fields gt 0) && ~user %]
+          <h3>Fields</h3>
+            [% IF n_ancestors gt 0 && ~user %]
+            [% FOREACH a IN ancestors %][% SCOPE a %]
+              [% IF n_fields gt 0 %]
+              <h4>Fields in [% IF has_url %]<a href="[% relative_root %][% url %]">[% END %][% classname %][% IF has_url %]</a>[% END %]</h4>
+              <ul class="fieldslist smaller">
+                [% FOREACH f IN fields %][% SCOPE f %]
+                <li><span class="fieldname">[% name %]</span> [% type %]</li>
+                [% END %][% END %]
+              </ul>
+              [% END %]
+            [% END %][% END %]
+            [% END %]
+
+            [% IF n_fields gt 0 %]
+            <h4>Fields in [% classname %]</h4>
+            <div class="details">
+              <dl>
+                [% FOREACH f IN fields %][% SCOPE f %]
+                <dt>[% name %] <span class="smaller">[% type %]</span></dt>
+                <dd class="small">[% comments %]</dd>
+                [% END %][% END %]
+              </dl>
+            </div>
+            [% END %]
+          [% END %]
+      </div>
+      [% END %][% END %][% END %]
+
+      [% IF (n_visible_routines gt 0L) || has_class %]
       <div>
         <h2>Routines</h2>
+        [% END %]
 
+      [% IF has_class %][% FOREACH class IN classes %][% SCOPE class %]
+        [% IF n_ancestors gt 0L %]
+        [% FOREACH a IN ancestors %][% SCOPE a %]
+          [% IF n_visible_methods gt 0 %]
+          <h3>Methods inherited from [% classname %]</h3>
+          <dl class="routine-summary">
+
+          [% FOREACH r IN visible_methods %][% SCOPE r %]
+            <dt class="syntax"><a href="#[% name %]"><code>[% IF is_function %]<span class="var">result</span> = [% END %][% name %][% IF is_function %]([% END %][% IF n_visible_parameters gt 0 %][% FOREACH p IN visible_parameters %][% SCOPE p %]<span class="argument">[% IF is_optional %] [[% END %][% prefix %][% name %][% suffix %][% IF is_optional %]][% END %]</span>[% END %][% END %][% END %][% IF n_visible_keywords gt 0 %][% FOREACH k IN visible_keywords %][% SCOPE k %]<span class="argument">[% IF is_optional %] [[% END %][% prefix %][% IF is_boolean %]/[% END %][% name %][% IF ~is_boolean %]=<span class="var">[% IF type ne '' %][% type %][% ELSE %][% name %][% END %]</span>[% END %][% suffix %][% IF is_optional %]][% END %]</span>[% END %][% END %][% END %][% IF is_function %])[% END %]</code></a></dt>
+            <dd class="small">[% comments_first_line %]</dd>
+          [% END %][% END %]
+          </dl>
+          [% END %]
+
+        [% END %][% END %]
+        [% END %]
+      [% END %][% END %][% END %]
+
+      [% IF n_visible_routines gt 1 %]
+        <h3>Routines from [% basename %]</h3>
         <dl class="routine-summary">
           [% FOREACH r IN visible_routines %][% SCOPE r %]
             <dt class="syntax"><a href="#[% name %]"><code>[% IF is_function %]<span class="var">result</span> = [% END %][% name %][% IF is_function %]([% END %][% IF n_visible_parameters gt 0 %][% FOREACH p IN visible_parameters %][% SCOPE p %]<span class="argument">[% IF is_optional %] [[% END %][% prefix %][% name %][% suffix %][% IF is_optional %]][% END %]</span>[% END %][% END %][% END %][% IF n_visible_keywords gt 0 %][% FOREACH k IN visible_keywords %][% SCOPE k %]<span class="argument">[% IF is_optional %] [[% END %][% prefix %][% IF is_boolean %]/[% END %][% name %][% IF ~is_boolean %]=<span class="var">[% IF type ne '' %][% type %][% ELSE %][% name %][% END %]</span>[% END %][% suffix %][% IF is_optional %]][% END %]</span>[% END %][% END %][% END %][% IF is_function %])[% END %]</code></a></dt>
             <dd class="small">[% comments_first_line %]</dd>
           [% END %][% END %]
         </dl>
-      </div>
       [% END %]
 
+      [% IF (n_visible_routines gt 0L) || has_class %]
+      </div>
+      [% END %]
 
       [% IF n_visible_routines gt 0 %]
       <div id="routine-details">
