--- a/src/templates/profile.tt
+++ b/src/templates/profile.tt
@@ -223,16 +223,15 @@
 
       [% IF has_class %][% FOREACH class IN classes %][% SCOPE class %]
         [% IF n_ancestors gt 0L %]
-        [% FOREACH a IN ancestors %][% SCOPE a %]
+        [% FOREACH a IN reverse_ancestors %][% SCOPE a %]
           [% IF n_visible_methods gt 0 %]
           <h3>Methods inherited from [% classname %]</h3>
-          <dl class="routine-summary">
+          <ul class="inherited-method-summary">
 
           [% FOREACH r IN visible_methods %][% SCOPE r %]
-            <dt class="syntax"><a href="#[% name %]"><code>[% IF is_function %]<span class="var">result</span> = [% END %][% name %][% IF is_function %]([% END %][% IF n_visible_parameters gt 0 %][% FOREACH p IN visible_parameters %][% SCOPE p %]<span class="argument">[% IF is_optional %] [[% END %][% prefix %][% name %][% suffix %][% IF is_optional %]][% END %]</span>[% END %][% END %][% END %][% IF n_visible_keywords gt 0 %][% FOREACH k IN visible_keywords %][% SCOPE k %]<span class="argument">[% IF is_optional %] [[% END %][% prefix %][% IF is_boolean %]/[% END %][% name %][% IF ~is_boolean %]=<span class="var">[% IF type ne '' %][% type %][% ELSE %][% name %][% END %]</span>[% END %][% suffix %][% IF is_optional %]][% END %]</span>[% END %][% END %][% END %][% IF is_function %])[% END %]</code></a></dt>
-            <dd class="small">[% comments_first_line %]</dd>
+            <li class="syntax"><a href="#[% name %]"><code>[% IF is_function %]<span class="var">result</span> = [% END %][% name %][% IF is_function %]([% END %][% IF n_visible_parameters gt 0 %][% FOREACH p IN visible_parameters %][% SCOPE p %]<span class="argument">[% IF is_optional %] [[% END %][% prefix %][% name %][% suffix %][% IF is_optional %]][% END %]</span>[% END %][% END %][% END %][% IF n_visible_keywords gt 0 %][% FOREACH k IN visible_keywords %][% SCOPE k %]<span class="argument">[% IF is_optional %] [[% END %][% prefix %][% IF is_boolean %]/[% END %][% name %][% IF ~is_boolean %]=<span class="var">[% IF type ne '' %][% type %][% ELSE %][% name %][% END %]</span>[% END %][% suffix %][% IF is_optional %]][% END %]</span>[% END %][% END %][% END %][% IF is_function %])[% END %]</code></a></li>
           [% END %][% END %]
-          </dl>
+          </ul>
           [% END %]
 
         [% END %][% END %]
