--- a/src/templates/latex-profile.tt
+++ b/src/templates/latex-profile.tt
@@ -63,7 +63,7 @@
 
 \begin{description}
 [% FOREACH p IN properties %][% SCOPE p %]
-\item[[% mg_escape_latex(name) %]] \hspace*{1em} {\small\smallcaps{[% IF is_get %]get [% END %][% IF is_set %]set [% END %][% IF is_init %]init [% END %][% IF has_type %]type=}[% type %][% ELSE %]}[% END %]} \newline [% comments %]
+\item[[% mg_escape_latex(name) %]] \hspace*{0em} {\footnotesize\smallcaps{[% IF is_get %]get\enspace [% END %][% IF is_set %]set\enspace [% END %][% IF is_init %]init\enspace [% END %][% IF has_type %]type=}[% type %]\enspace[% ELSE %]}[% END %]} \newline [% comments %]
 [% END %][% END %]
 \end{description}
 
@@ -76,7 +76,7 @@
 
 \begin{description}
 [% FOREACH f IN fields %][% SCOPE f %]
-\item[[% mg_escape_latex(name) %]] \hspace*{1em} {\small\smallcaps{[% mg_escape_latex(type) %]}} \newline [% comments %]
+\item[[% mg_escape_latex(name) %]] \hspace*{0em} {\footnotesize\smallcaps{[% mg_escape_latex(type) %]}} \newline [% comments %]
 [% END %][% END %]
 \end{description}
 
@@ -87,7 +87,7 @@
 \begin{description}
 [% FOREACH a IN ancestors %][% SCOPE a %]
 [% IF n_fields gt 0 %]
-\item[Fields in [% mg_escape_latex(classname) %]] \hspace*{1em} \newline
+\item[Fields in [% mg_escape_latex(classname) %]] \hspace*{0em} \newline
 [% FOREACH f IN fields %][% SCOPE f %]
 [% mg_escape_latex(name) %] {\small\smallcaps{[% mg_escape_latex(type) %]}} \newline
 [% END %][% END %]
@@ -102,19 +102,19 @@
 [% IF has_author_info %]
 \begin{description}
 [% IF has_author %]
-  \item[Author]\hspace*{1em} \newline [% author %]
+  \item[Author]\hspace*{0em} \newline [% author %]
 [% END %]
 
 [% IF has_copyright %]
-  \item[Copyright]\hspace*{1em} \newline [% copyright %]
+  \item[Copyright]\hspace*{0em} \newline [% copyright %]
 [% END %]
 
 [% IF has_history %]
-  \item[History]\hspace*{1em} \newline [% history %]
+  \item[History]\hspace*{0em} \newline [% history %]
 [% END %]
 
 [% IF has_version %]
-  \item[Version]\hspace*{1em} \newline [% version %]
+  \item[Version]\hspace*{0em} \newline [% version %]
 [% END %]
 \end{description}
 [% END %]
@@ -122,27 +122,27 @@
 [% IF has_others %]
 \begin{description}
 [% IF has_bugs %]
-\item[Bugs]\hspace*{1em} \newline [% bugs %]
+\item[Bugs]\hspace*{0em} \newline [% bugs %]
 [% END %]
 
 [% IF has_customer_id %]
-\item[Customer ID]\hspace*{1em} \newline [% customer_id %]
+\item[Customer ID]\hspace*{0em} \newline [% customer_id %]
 [% END %]
 
 [% IF has_requires %]
-item[Requires]\hspace*{1em} \newline [% requires %]
+item[Requires]\hspace*{0em} \newline [% requires %]
 [% END %]
 
 [% IF has_restrictions %]
-\item[Restrictions]\hspace*{1em} \newline [% restrictions %]
+\item[Restrictions]\hspace*{0em} \newline [% restrictions %]
 [% END %]
 
 [% IF has_todo %]
-\item[Todo]\hspace*{1em} \newline [% todo %]
+\item[Todo]\hspace*{0em} \newline [% todo %]
 [% END %]
 
 [% IF has_uses %]
-\item[Uses]\hspace*{1em} \newline [% uses %]
+\item[Uses]\hspace*{0em} \newline [% uses %]
 [% END %]
 \end{description}
 [% END %]
@@ -155,7 +155,7 @@ item[Requires]\hspace*{1em} \newline [% requires %]
 
 \subsection*{\allcaps{[% mg_escape_latex(name) %]}}
 
-\marginnote{[% IF is_private %]private [% END %][% IF is_obsolete %]obsolete [% END %][% IF is_abstract %]abstract [% END %]}
+\marginnote{[% IF is_private %]private [% END %][% IF is_obsolete %]obsolete\enspace [% END %][% IF is_abstract %]abstract\enspace [% END %]}
 
 [% IF has_comments %]
 \noindent [% comments %]
@@ -168,16 +168,16 @@ item[Requires]\hspace*{1em} \newline [% requires %]
 
 [% IF is_function and has_returns %]
 \begin{description}
-\item[Returns]\hspace*{1em} \newline [% returns %]
+\item[Returns]\hspace*{0em} \newline [% returns %]
 \end{description}
 [% END %]
 
 [% IF n_parameters gt 0 %]
 \begin{description}
-\item[Parameters]\hspace*{1em} \newline
+\item[Parameters]\hspace*{0em} \newline
 \begin{description}
 [% FOREACH p IN parameters %][% SCOPE p %]
-\item[[% mg_escape_latex(name) %]]\hspace*{1em} {\small [% IF is_input %]\smallcaps{in} [% END %][% IF is_output %]\smallcaps{out} [% END %][% IF is_optional %]\smallcaps{optional} [% END %][% IF is_required %]\smallcaps{required} [% END %][% IF is_private %]\smallcaps{private} [% END %][% IF is_hidden %]\smallcaps{hidden} [% END %][% IF is_obsolete %]\smallcaps{obsolete} [% END %][% IF type ne '' %]\smallcaps{type=}[% mg_escape_latex(type) %] [% END %][% IF default_value ne '' %]\smallcaps{default=}[% mg_escape_latex(default_value) %][% END %]} \newline [% comments %]
+\item[[% mg_escape_latex(name) %]]\hspace*{1em} {\footnotesize [% IF is_input %]\smallcaps{in} [% END %][% IF is_output %]\smallcaps{out} [% END %][% IF is_optional %]\smallcaps{optional} [% END %][% IF is_required %]\smallcaps{required} [% END %][% IF is_private %]\smallcaps{private} [% END %][% IF is_hidden %]\smallcaps{hidden} [% END %][% IF is_obsolete %]\smallcaps{obsolete} [% END %][% IF type ne '' %]\smallcaps{type=}[% mg_escape_latex(type) %] [% END %][% IF default_value ne '' %]\smallcaps{default=}[% mg_escape_latex(default_value) %][% END %]} \newline [% comments %]
 [% END %][% END %]
 \end{description}
 \end{description}
@@ -185,10 +185,10 @@ item[Requires]\hspace*{1em} \newline [% requires %]
 
 [% IF n_keywords gt 0 %]
 \begin{description}
-\item[Keywords]\hspace*{1em} \newline
+\item[Keywords]\hspace*{0em} \newline
 \begin{description}
 [% FOREACH k IN keywords %][% SCOPE k %]
-\item[[% mg_escape_latex(name) %]]\hspace*{1em} {\small [% IF is_input %]\smallcaps{in} [% END %][% IF is_output %]\smallcaps{out} [% END %][% IF is_optional %]\smallcaps{optional} [% END %][% IF is_required %]\smallcaps{required} [% END %][% IF is_private %]\smallcaps{private} [% END %][% IF is_hidden %]\smallcaps{hidden} [% END %][% IF is_obsolete %]\smallcaps{obsolete} [% END %][% IF type ne '' %]\smallcaps{type=}[% mg_escape_latex(type) %] [% END %][% IF default_value ne '' %]\smallcaps{default=}[% mg_escape_latex(default_value) %][% END %]} \newline [% comments %]
+\item[[% mg_escape_latex(name) %]]\hspace*{1em} {\footnotesize [% IF is_input %]\smallcaps{in} [% END %][% IF is_output %]\smallcaps{out} [% END %][% IF is_optional %]\smallcaps{optional} [% END %][% IF is_required %]\smallcaps{required} [% END %][% IF is_private %]\smallcaps{private} [% END %][% IF is_hidden %]\smallcaps{hidden} [% END %][% IF is_obsolete %]\smallcaps{obsolete} [% END %][% IF type ne '' %]\smallcaps{type=}[% mg_escape_latex(type) %] [% END %][% IF default_value ne '' %]\smallcaps{default=}[% mg_escape_latex(default_value) %][% END %]} \newline [% comments %]
 [% END %][% END %]
 \end{description}
 \end{description}
@@ -196,26 +196,26 @@ item[Requires]\hspace*{1em} \newline [% requires %]
 
 [% IF has_examples %]
 \begin{description}
-\item[Examples]\hspace*{1em} \newline [% examples %]
+\item[Examples]\hspace*{0em} \newline [% examples %]
 \end{description}
 [% END %]
 
 [% IF has_author_info %]
 \begin{description}
 [% IF has_author %]
-\item[Author]\hspace*{1em} \newline[% author %]
+\item[Author]\hspace*{0em} \newline[% author %]
 [% END %]
 
 [% IF has_copyright %]
-\item[Copyright]\hspace*{1em} \newline[% copyright %]
+\item[Copyright]\hspace*{0em} \newline[% copyright %]
 [% END %]
 
 [% IF has_history %]
-\item[History]\hspace*{1em} \newline[% history %]
+\item[History]\hspace*{0em} \newline[% history %]
 [% END %]
 
 [% IF has_version %]
-\item[Version]\hspace*{1em} \newline[% version %]
+\item[Version]\hspace*{0em} \newline[% version %]
 [% END %]
 \end{description}
 [% END %]
@@ -223,35 +223,35 @@ item[Requires]\hspace*{1em} \newline [% requires %]
 [% IF has_others %]
 \begin{description}
 [% IF has_todo %]
-\item[Todo]\hspace*{1em} \newline [% todo %]
+\item[Todo]\hspace*{0em} \newline [% todo %]
 [% END %]
 
 [% IF has_restrictions %]
-\item[Restrictions]\hspace*{1em} \newline [% restrictions %]
+\item[Restrictions]\hspace*{0em} \newline [% restrictions %]
 [% END %]
 
 [% IF has_requires %]
-\item[Requires]\hspace*{1em} \newline [% requires %]
+\item[Requires]\hspace*{0em} \newline [% requires %]
 [% END %]
 
 [% IF has_uses %]
-\item[Uses]\hspace*{1em} \newline [% uses %]
+\item[Uses]\hspace*{0em} \newline [% uses %]
 [% END %]
 
 [% IF has_bugs %]
-\item[Bugs]\hspace*{1em} \newline [% bugs %]
+\item[Bugs]\hspace*{0em} \newline [% bugs %]
 [% END %]
 
 [% IF has_pre %]
-\item[Pre-condition]\hspace*{1em} \newline [% pre %]
+\item[Pre-condition]\hspace*{0em} \newline [% pre %]
 [% END %]
 
 [% IF has_post %]
-\item[Post-condition]\hspace*{1em} \newline [% post %]
+\item[Post-condition]\hspace*{0em} \newline [% post %]
 [% END %]
 
 [% IF has_customer_id %]
-\item[Customer ID]\hspace*{1em} \newline [% customer_id %]
+\item[Customer ID]\hspace*{0em} \newline [% customer_id %]
 [% END %]
 \end{description}
 [% END %]
@@ -259,7 +259,7 @@ item[Requires]\hspace*{1em} \newline [% requires %]
 [% IF statistics %]
 \begin{description}
 \item[Lines]\hspace*{1em} \newline [% n_lines %]
-\item[McCabe complexity]\hspace*{1em} \newline
+\item[McCabe complexity]\hspace*{0em} \newline
 \end{description}
 [% END %]
 
@@ -269,13 +269,13 @@ item[Requires]\hspace*{1em} \newline [% requires %]
 
 [% IF statistics %]
 \begin{description}
-\item[File attributes]\hspace*{1em} \newline
+\item[File attributes]\hspace*{0em} \newline
 
 \begin{description}
-\item[Modification date]\hspace*{1em} \newline [% modification_time %]
+\item[Modification date]\hspace*{0em} \newline [% modification_time %]
 \item[Lines]\hspace*{1em} \newline [% n_lines %]
 [% IF format ne '' || markup ne '' %]
-\item[Docformat]\hspace*{1em} \newline [% format %][% IF format ne '' %] [% END %][% markup %]
+\item[Docformat]\hspace*{0em} \newline [% format %][% IF format ne '' %] [% END %][% markup %]
 [% END %]
 \end{description}
 
