--- a/src/templates/search.tt
+++ b/src/templates/search.tt
@@ -45,7 +45,7 @@
     	<h2>Search</h2>
 
  				<form name="basicForm">
- 					<input class="text" name="basicText" size="50"/>&nbsp;<input name="send" type="submit" value="Search" onClick="basicsearch()"/>
+ 					<input class="text" name="basicText" size="50" onkeypress="return isAlnum(event.key) || event.key == '_'"/>&nbsp;<input name="send" type="submit" value="Search" onClick="basicsearch()"/>
  				</form>
 
        <p class="smaller description">Enter search terms to find in file and routine comment headers. The search is case insensitive.</p>
